Bug 406568. Don't reflow abs-pos kids of a block if we're going to reflow it again because of a clearance change. r=sr=dbaron